# cmake_learn_demo

demo1/: CMakeLists.txt
demo2/: CMakeLists.txt  main.cpp
demo2/include/: say_hello.h
demo2/src/: say_hello.cpp
demo3/: CMakeLists.txt  main.cpp
